Resolved jump to latest & error popup

--- a/src/containers/Chat/ChatMessages/ChatInput/ChatInput.module.css
+++ b/src/containers/Chat/ChatMessages/ChatInput/ChatInput.module.css
@@ -221,9 +221,9 @@
   color: #edf6f2;
   border-radius: 12px 12px 0 0;
   z-index: 100;
-  top: -17px;
+  margin-top: -30px;
+  width: fit-content;
   left: 50%;
-  transform: translateX(-50%);
 }
 
 .AttachmentIcon {
